2012-07-15  Charlie Zender  <zender@uci.edu>

	* NCO 4.2.1 release procedure:
 	Changes since nco-4_2_0: no_tmp_fl, NC_DISKLESS, -'ve -d args
	cd ~/nco;cvs tag -d nco-4_2_1;cvs tag -d nco-4_2_1-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.1 release"
	cvs tag -c nco-4_2_1;cvs tag -c nco-4_2_1-1

	* Document diskless/RAM and --no_tmp_fl options, and -'ve -d args

2012-07-13  Charlie Zender  <zender@uci.edu>

	* ncks: only add NCO version attribute when HISTORY_ATT_CAT == True

	* Add data/hdr_pad.sh to check metadata header size. Add --hdr_pad to man pages.

2012-07-13  Pedro Vicente  <pvicente@uci.edu>

        * Qt/MSVC add projects for ncrcat and ncea

2012-07-11  Pedro Vicente  <pvicente@uci.edu>

        * ncpdq unpack coordinate variables (nco1030)

2012-07-11  Charlie Zender  <zender@uci.edu>

	* Work on allowing inherited att_typ when aed_mode = modify

	* Add --hdr_pad, --bfr_sz, --no_tmp_fl, --ram_all to man pages

	* Remove 'convert' and nco.png from tags

2012-07-10  Pedro Vicente  <pvicente@uci.edu>

        * Qt/MSVC changes for strcasestr(); enable NEED_STRCASECMP in Qt project

2012-07-09  Charlie Zender  <zender@uci.edu>

	* Negative integer as min or max element of hyperslab specification indicates offset from end
	Fulfills a 2008 feature request of Nick Bower

2012-07-09  Pedro Vicente  <pvicente@uci.edu>

        * Set configure option --enable-netcdf4 to yes by default

2012-07-08  Charlie Zender  <zender@uci.edu>

	* Update man pages with related commands

	* Enable --fl_fmt switch synonym to --file_format on all applicable operators

	* Apply bugfix from Roux so ncra always averages coordinate variables

2012-07-06  Charlie Zender  <zender@uci.edu>

	* Use strcasestr() instead of strstr() for fl_fmt conversions (i.e., netCDF4 = netcdf4)

	* Die when netCDF4 output explicitly requested from netCDF3-only NCO

	* Fix [-? ...] command line option help in nco_ctl.c

2012-07-05  Pedro Vicente  <pvicente@uci.edu>
